# Pobedi-me-ako-znas

./: CMakeLists.txt  README.md  coverage.info  doxyfile  game.pro  kozna.txt  test.sh  test.sh.orig
application/: CMakeLists.txt  Makefile  Makefile.orig  application.pro  application.pro.orig  application.pro.user.2543111  application.pro.user.2543111.4.8-pre1  application.pro.user.4.8-pre1  application.pro.user.99ff09c  application.pro.user.99ff09c.22  cardwidget.cpp  cardwidget.h  game.cpp  game.h  infolog.cpp  infolog.h  infolog.ui  kozna.cpp  kozna.h  kozna.ui  koznaui.cpp  koznaui.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  memorija.cpp  memorija.h  memorija.ui  moc_koznaui.cpp  moc_memorija.cpp  moc_mojbroj.cpp  moc_pocetniekran.cpp  moc_pogodistaui.cpp  moc_reckoui.cpp  mojbroj.cpp  mojbroj.cpp.autosave  mojbroj.h  (+38 more)
buid/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build-application-Desktop-Debug/: Makefile  application  moc_cardwidget.cpp  moc_kozna.cpp  moc_koznaui.cpp  moc_logindialog.cpp  moc_mainwindow.cpp  moc_memorija.cpp  moc_mojbroj.cpp  moc_pocetniekran.cpp  moc_podrunda.cpp  moc_podrundaui.cpp  moc_pogodista.cpp  moc_pogodistaui.cpp  moc_reckoui.cpp  moc_wordlewindow.cpp  (+8 more)
server/server/: CMakeLists.txt  lobby.cpp  lobby.h  main.cpp  mainwindow.h  player.cpp  player.h  resources.qrc  server.cpp  server.h  server.pro  session.cpp  session.h
server/server/pitanja/: kozna.txt
server/server/podrunda_pitanja/: pitanja.txt
server/server/resources/: PogodiSta.txt  results.txt
(+722 files in other folders)
